samples/_failures_safe/1761143320_8ce425_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_069dea2f.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_069dea2f.c:140:9: error: expected identifier at end of input
  140 |         token->value[0] = lexer->
      |         ^~~~~
./samples/SAFE/__tmp_069dea2f.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_069dea2f.c:140:9: error: expected declaration or statement at end of input
